<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#ffcc00">

    <Button
        android:id="@+id/recent_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recent_label"
        android:background="#ffcc00"
        android:textSize="20.5sp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/settings_button"
        android:textColor="#2f2f2f" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/mods_arch2"
        android:layout_alignBottom="@+id/recent_button"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_label"
        android:background="#ffcc00"
        android:textSize="20.5sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:textColor="#2f2f2f" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_label"
        android:background="#ffcc00"
        android:textSize="20.5sp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/home_button"
        android:textColor="#2f2f2f" />

    <Button
        android:id="@+id/home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_label"
        android:background="#ffcc00"
        android:textSize="20.5sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:textColor="#2f2f2f" />

    <Button
        android:id="@+id/map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map_label"
        android:background="#ffcc00"
        android:textSize="20.5sp"
        android:layout_alignTop="@+id/home_button"
        android:layout_centerHorizontal="true"
        android:textColor="#2f2f2f" />


    <Button
        android:id="@+id/sound_waves_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sound_waves_label"
        android:background="#ffcc00"
        android:textSize="25.5sp"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/back_button"
        android:textColor="#2f2f2f" />

    <Button
        android:id="@+id/visual_waves_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visual_waves_label"
        android:background="#ffcc00"
        android:textSize="25.5sp"
        android:layout_alignTop="@+id/sound_waves_button"
        android:layout_toLeftOf="@+id/recent_button"
        android:textColor="#2f2f2f" />

    <TextView
        android:text="@string/waves_title"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="55.5sp"
        android:textColor="#ff000000"
        android:id="@+id/textView"
        android:gravity="center"
        android:layout_marginTop="128dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/imageButton"
        android:layout_below="@+id/sound_waves_button"
        android:layout_alignLeft="@+id/back_button"
        android:layout_toLeftOf="@+id/imageView"
        android:layout_above="@+id/home_button"/>

    <ImageButton
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/imageButton"
        android:layout_below="@+id/visual_waves_button"
        android:layout_alignRight="@+id/recent_button"
        android:layout_toRightOf="@+id/imageView"
        android:layout_above="@+id/settings_button"/>

</RelativeLayout>
