<?xml version="1.0" encoding="utf-8"?>
<!--
 ! Excerpted from "Hello, Android",
 ! published by The Pragmatic Bookshelf.
 ! Copyrights apply to this code. It may not be used to create training material, 
 ! courses, books, articles, and the like. Contact us if you are in doubt.
 ! We make no guarantees that this code is fit for any purpose. 
 ! Visit http://www.pragmaticprogrammer.com/titles/eband3 for more book information.
-->


<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbackground"
    android:gravity="center"
    android:padding="30dip">

    <Button
        android:id="@+id/home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_label"
        android:background="#00000000"
        android:textSize="20.5sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:textColor="#2f2f2f"
        android:onClick="clickHome" />

    <Button
        android:id="@+id/map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map_label"
        android:background="#00000000"
        android:textSize="20.5sp"
        android:layout_alignTop="@+id/home_button"
        android:layout_centerHorizontal="true"
        android:textColor="#2f2f2f"
        android:onClick="clickMap"/>

    <Button
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_label"
        android:background="#00000000"
        android:textSize="20.5sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:textColor="#2f2f2f" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_label"
        android:background="#00000000"
        android:textSize="20.5sp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/home_button"
        android:textColor="#2f2f2f"
        android:onClick="clickBack"/>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/logo"
        android:src="@drawable/mods_arch2"
        android:layout_centerHorizontal="true"
        android:background="#00000000"
        android:layout_marginBottom="825dp"/>


    <ImageButton
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:id="@+id/puzzles_image_button"
        android:src="@drawable/pzl"
        android:background="@android:color/transparent"
        android:gravity="left"
        android:layout_above="@+id/sounds_and_visual_waves_image_button"
        android:layout_toLeftOf="@+id/logo"
        android:layout_marginBottom="42dp"
        android:onClick="clickPuzzles"/>

    <ImageButton
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:id="@+id/sounds_and_visual_waves_image_button"
        android:src="@drawable/wve"
        android:background="#00000000"
        android:gravity="left"
        android:layout_alignBottom="@+id/sounds_and_visual_waves_ti_button"
        android:layout_alignLeft="@+id/physics_image_button"
        android:onClick="clickWaves"/>

    <ImageButton
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:id="@+id/technology_image_button"
        android:src="@drawable/tch"
        android:background="#00000000"
        android:gravity="left"
        android:layout_alignBottom="@+id/technology_ti_button"
        android:layout_alignLeft="@+id/physics_image_button"
        android:onClick="clickTechnology"/>

    <ImageButton
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:id="@+id/physics_image_button"
        android:src="@drawable/phy"
        android:background="#00000000"
        android:gravity="left"
        android:layout_alignTop="@+id/physics_ti_button"
        android:layout_alignLeft="@+id/puzzles_image_button"
        android:onClick="clickPhysics"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/physics_ti_button"
        android:src="@drawable/phytibutton"
        android:background="#00000000"
        android:gravity="left"
        android:layout_below="@+id/sounds_and_visual_waves_ti_button"
        android:layout_alignLeft="@+id/technology_ti_button"
        android:layout_marginTop="40dp"
        android:onClick="clickPhysics"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sounds_and_visual_waves_ti_button"
        android:src="@drawable/wvetibutton"
        android:background="#00000000"
        android:gravity="left"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/puzzles_ti_button"
        android:onClick="clickWaves"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/technology_ti_button"
        android:src="@drawable/tchtibutton"
        android:background="#00000000"
        android:gravity="left"
        android:layout_marginTop="47dp"
        android:layout_below="@+id/physics_ti_button"
        android:layout_alignLeft="@+id/map_button"
        android:onClick="clickTechnology"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/puzzles_ti_button"
        android:src="@drawable/pzltibutton"
        android:background="#00000000"
        android:gravity="left"
        android:layout_alignBottom="@+id/puzzles_image_button"
        android:layout_alignLeft="@+id/physics_ti_button"
        android:onClick="clickPuzzles"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Welcome"
            android:id="@+id/name_button"
            android:layout_gravity="right"
            android:onClick="clickNameButton"
            android:textColor="#2f2f2f"
            android:textSize="20dp"
            android:background="#ffcc00" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Game"
            android:id="@+id/button"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:onClick="clickAnimalGame" />
    </LinearLayout>

</RelativeLayout><!-- From: file:/C:/Users/D/StudioProjects/Sudokuv11/app/src/main/res/layout/main.xml -->




